--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "phone": "^3.1.31",
+    "validator": "^13.7.0"
   }
 }
